k8s/menu.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: menu
  namespace: foodtruck
spec:
  replicas: 1
  selector:
    matchLabels:
      app: menu
  template:
    metadata:
      labels:
        app: menu
    spec:
      containers:
        - name: menu
          image: sivaprasadtg/menu-service:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /menu/health
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /menu/health
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi

---
apiVersion: v1
kind: Service
metadata:
  name: menu
  namespace: foodtruck
spec:
  type: ClusterIP
  selector:
    app: menu
  ports:
    - port: 3000
      targetPort: 3000
