k8s/order.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order
  namespace: foodtruck
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      containers:
        - name: order
          image: sivaprasadtg/order-service:v1
          ports:
            - containerPort: 4000
          readinessProbe:
            httpGet:
              path: /health
              port: 4000
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 4000
            initialDelaySeconds: 10
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: order
  namespace: foodtruck
spec:
  type: ClusterIP
  selector:
    app: order
  ports:
    - port: 4000
      targetPort: 4000
