k8s/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: foodtruck
  labels:
    app: postgres
spec:
  clusterIP: None
  selector:
    app: postgres
  ports:
    - port: 5432
      name: psql
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: foodtruck
spec:
  serviceName: postgres
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: db
          image: postgres:18
          ports:
            - containerPort: 5432
              name: psql
          volumeMounts:
            - name: pgdata
              mountPath: /var/lib/postgresql
            - name: init-sql
              mountPath: /docker-entrypoint-initdb.d
          readinessProbe:
            exec:
              command: ["pg_isready","-U","food","-d","foodtruck"]
            initialDelaySeconds: 10
            periodSeconds: 5
      volumes:
        - name: init-sql
          configMap:
            name: db-init
  volumeClaimTemplates:
    - metadata:
        name: pgdata
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 5Gi
