k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foodtruck
  namespace: foodtruck
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: "/$1"
spec:
  rules:
    - host: foodtruck.local
      http:
        paths:
          - path: /menu/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: menu
                port:
                  number: 3000
          - path: /orders/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: order
                port:
                  number: 4000
